--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.4",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.0.10",
     "@types/reach__router": "^1.2.4",
     "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "cross-env": "^5.2.0",
+    "jest": "^24.8.0",
     "parcel-bundler": "^1.12.1",
     "prettier": "^1.16.1",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
@@ -31,7 +36,7 @@
     "dev:mock": "cross-env PET_MOCK=mock parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "tslint --project",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "typecheck": "tsc --noEmit"
   },
   "author": "Brian Holt <btholt+complete-intro-to-react@gmail.com>",
